COMET 1.27.2 - 2022-04-18
------------------------
- Update ENSEMBL functions for https
- Remove DNase_UCSC functions
- Add information about font.family for plotTrack and other Gviz functions
- Add showtext library in coMET.Rnw vignette

COMET 1.23.1 - 2021-05-16
-------------------------
- Update datasets with Biomart
For example:
data(allIG)
allIG@biomart@httr_config <- list()
save(allIG,file="XXXX")

COMET 1.15.2 - 2018-12-24
-------------------------
- Update vignette (add warning=False)

COMET 1.15.1 - 2018-12-24
-------------------------
- Update script to snp_ensembL

COMET 1.11.5 - 2018-04-11
-------------------------
- Update vignettes

COMET 1.11.4 - 2018-03-28
-------------------------
- Update examples in manual because change of functions
- Put some functions obselete because change of database (such as COSMIC, regulatory segment ENSEMBL, ISCA)
- remove R package, ggplot2, ggbio and trackviewer

COMET 1.11.3 - 2018-02-25
-------------------------
- Update vignette because of the update of BiocStyle
- Update two data (chipTFtrack.rda and genesGencodetrack.rda) because error formating

COMET 1.11.1 - 2017-07-27
-------------------------
- Update vignette because of the update of BiocStyle
- Add examples data that was not uploaded correctly the first time

COMET 1.5.5 - 2016-06-12
-------------------------
- Update the script for coMET website
- remove big files
- Add examples data that was not uploaded correctly the first time

COMET 1.5.3 - 2016-06-8
-------------------------
-Change the name of functions:
  xenorefGenesUCSC into xenorefGenes_UCSC
  transcriptENSEMBL into transcript_ENSEMBL
  structureBiomart into structureBiomart_ENSEMBL
  snpLocationsUCSC into snpLocations_UCSC
  snpBiomart into snpBiomart_ENSEMBL
  RepeatMaskerTrack into repeatMasker_UCSC
  regulationBiomart into regulationBiomart_ENSEMBL
  knownGenesUCSC into knownGenes_UCSC
  ISCATrack into ISCA_UCSC
  HistoneOne into HistoneOne_UCSC
  HistoneAll to HistoneAll_UCSC