@@ -1,3 +1,8 @@
+COMET 1.29.2 - 2022-10-26
+-----------------------
+- Remove dependancy colortools
+- Add functions to replace the package colortools
+
 COMET 1.27.2 - 2022-04-18
 ------------------------
 - Update ENSEMBL functions for https
